Change gold to per gram

--- a/public/index.html
+++ b/public/index.html
@@ -498,7 +498,7 @@
 
     <!-- Gold Section -->
     <section class="section">
-      <h2 class="section-title">黄金价格 (每盎司)</h2>
+      <h2 class="section-title">黄金价格 (每克)</h2>
       <div class="grid gold-grid" id="goldPrices">
         <div class="loading">
           <div class="spinner"></div>
@@ -792,7 +792,7 @@
           <div class="card-header">
             <div>
               <div class="card-title">${item.name}</div>
-              <div class="card-subtitle">${market} (每盎司)</div>
+              <div class="card-subtitle">${market} (每克)</div>
             </div>
             <span class="change ${changeClass}">
               ${changeIcon} ${Math.abs(item.changePercent).toFixed(2)}%
